@@ -53,6 +53,8 @@
 #define ERR_NOSUCHSERVICE    408
 #define	ERR_NOORIGIN         409
 
+#define ERR_INVALIDCAPCMD    410
+
 #define ERR_NORECIPIENT      411
 #define ERR_NOTEXTTOSEND     412
 #define ERR_NOTOPLEVEL       413
