@@ -219,7 +219,7 @@ MOD_FILES=SRC/MODULES/L_COMMANDS.C SRC/MODULES/M_CHGHOST.C SRC/MODULES/M_SDESC.C
  SRC/MODULES/M_WATCH.C SRC/MODULES/M_PART.C SRC/MODULES/M_JOIN.C \
  SRC/MODULES/M_MOTD.C SRC/MODULES/M_OPERMOTD.C SRC/MODULES/M_BOTMOTD.C \
  SRC/MODULES/M_LUSERS.C SRC/MODULES/M_NAMES.C SRC/MODULES/M_SVSNOLAG.C \
- SRC/MODULES/M_STARTTLS.C SRC/MODULES/M_NOPOST.C SRC/MODULES/M_ISSECURE.C
+ SRC/MODULES/M_STARTTLS.C SRC/MODULES/M_NOPOST.C SRC/MODULES/M_ISSECURE.C SRC/MODULES/M_CAP.C
 
 DLL_FILES=SRC/MODULES/M_CHGHOST.DLL SRC/MODULES/M_SDESC.DLL SRC/MODULES/M_SETIDENT.DLL \
  SRC/MODULES/M_SETNAME.DLL SRC/MODULES/M_SETHOST.DLL SRC/MODULES/M_CHGIDENT.DLL \
@@ -256,7 +256,7 @@ DLL_FILES=SRC/MODULES/M_CHGHOST.DLL SRC/MODULES/M_SDESC.DLL SRC/MODULES/M_SETIDE
  SRC/MODULES/M_MOTD.DLL SRC/MODULES/M_OPERMOTD.DLL SRC/MODULES/M_BOTMOTD.DLL \
  SRC/MODULES/M_LUSERS.DLL SRC/MODULES/M_NAMES.DLL SRC/MODULES/M_SVSNOLAG.DLL \
  SRC/MODULES/M_STARTTLS.DLL \
- SRC/MODULES/M_NOPOST.DLL SRC/MODULES/M_ISSECURE.DLL \
+ SRC/MODULES/M_NOPOST.DLL SRC/MODULES/M_ISSECURE.DLL SRC/MODULES/M_CAP.DLL \
  SRC/MODULES/CLOAK.DLL
 
 
@@ -824,6 +824,9 @@ src/modules/m_nopost.dll: src/modules/m_nopost.c $(INCLUDES)
 
 src/modules/m_issecure.dll: src/modules/m_issecure.c $(INCLUDES)
 	$(CC) $(MODCFLAGS) src/modules/m_issecure.c $(MODLFLAGS)
+
+src/modules/m_cap.dll: src/modules/m_cap.c $(INCLUDES)
+	$(CC) $(MODCFLAGS) src/modules/m_cap.c $(MODLFLAGS)
 
 dummy:
 
