@@ -178,6 +178,7 @@ extern int m_svsnolag_Load(int module_load);
 extern int m_starttls_Load(int module_load);
 extern int m_nopost_Load(int module_load);
 extern int m_issecure_Load(int module_load);
+extern int m_cap_Load(int module_load);
 #ifdef GUEST
 extern int m_guest_Load(int module_load);
 #endif
@@ -217,6 +218,7 @@ extern int m_lusers_Unload(), m_names_Unload(), m_svsnolag_Unload();
 extern int m_starttls_Unload();
 extern int m_nopost_Unload();
 extern int m_issecure_Unload();
+extern int m_cap_Unload();
 #ifdef GUEST
 extern int m_guest_Unload();
 #endif
@@ -477,6 +479,7 @@ int    l_commands_Load(int module_load)
 	m_starttls_Load(module_load);
 	m_nopost_Load(module_load);
 	m_issecure_Load(module_load);
+	m_cap_Load(module_load);
 #ifdef GUEST
 	m_guest_Load(module_load);
 #endif
@@ -592,6 +595,7 @@ int	l_commands_Unload(int module_unload)
 	m_starttls_Unload();
 	m_nopost_Unload();
 	m_issecure_Unload();
+	m_cap_Unload();
 #ifdef GUEST
 	m_guest_Unload();
 #endif
