@@ -2348,3 +2348,5 @@
   and also means nothing will change in a non-ESVID scenario.
 - Fix misuse of stdarg.h macros when calling vsyslog() (#4065 by Jimini).
 - Ditch vsyslog() as it's only a waste of CPU, inspired by #4065.
+- Add CAP support. Currently implemented are: multi-prefix (NAMESX), and
+  userhost-in-names (UHNAMES). Patch from nenotopia (#4018, #4066).
